packages/errors/test/__snapshots__/FILE_SERVER_COULD_NOT_LISTEN.ansi
[31mCypress could not start its internal file server.[39m
[31m[39m
[31mAfter [33m3[39m[31m attempts to listen on an available port on [95m127.0.0.1[39m[31m, the last attempt failed with:[39m
[31m[39m
[31m[95mfail whale[39m[31m[39m
[31m[39m
[31mPlease try again later.[39m